Se implementan todos los modulos y paquetes, no hay nada testeado
Aun no se corrio el proyecto, solamente se implementaron las clases
basicas, falta agregar si o si la DI, sin esta es imposible respetar
Clean Architecture

--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -9,13 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>persistencia</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>com.desitsa</groupId>
-            <artifactId>aplicacion</artifactId>
-            <version>1.0</version>
-        </dependency>
-    </dependencies>
+    <artifactId>launcher</artifactId>
+
 
 </project>
