--- a/comunicacion/pom.xml
+++ b/comunicacion/pom.xml
@@ -9,14 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>presentacion</artifactId>
-
+    <artifactId>comunicacion</artifactId>
     <dependencies>
-        <dependency>
-            <groupId>com.github.dozermapper</groupId>
-            <artifactId>dozer-core</artifactId>
-            <version>6.5.0</version>
-        </dependency>
         <dependency>
             <groupId>com.desitsa</groupId>
             <artifactId>aplicacion</artifactId>
